--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:gB1CSfvBDB00eOvL9qtv5Ka2MQGp8+lE2NCmQeqb7+I=
 APP_DEBUG=true
 APP_URL=http://localhost
 
