--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,23 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: laravel-app
     container_name: laravel-app
     restart: unless-stopped
     working_dir: /var/www/html
     volumes:
       - .:/var/www/html
     ports:
-      - "8000:9000"
+      - "80:80"  # exposer le port 80
+    environment:
+      DB_CONNECTION: mysql
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_DATABASE: laravel
+      DB_USERNAME: laraveluser
+      DB_PASSWORD: laravelpass
     depends_on:
       - db
+    command: php artisan serve --host=0.0.0.0 --port=80
 
   db:
     image: mysql:8.0
