--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,18 +10,20 @@ services:
     working_dir: /var/www/html
     volumes:
       - .:/var/www/html
-    ports:
-      - "80:80"  # exposer le port 80
-    environment:
-      DB_CONNECTION: mysql
-      DB_HOST: db
-      DB_PORT: 3306
-      DB_DATABASE: laravel
-      DB_USERNAME: laraveluser
-      DB_PASSWORD: laravelpass
     depends_on:
       - db
-    command: php artisan serve --host=0.0.0.0 --port=80
+
+  web:
+    image: nginx:alpine
+    container_name: laravel-web
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - .:/var/www/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app
 
   db:
     image: mysql:8.0
