--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,73 @@
-server {
-    listen 80;
-    server_name localhost;
+worker_processes auto;
 
-    root /var/www/html/public;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
-    index index.php index.html;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                  '$status $body_bytes_sent "$http_referer" '
+                  '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
+
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    server_tokens off;
+
+    # Configuration du serveur HTTP (redirection vers HTTPS)
+    server {
+        listen 80;
+        server_name localhost;
+        
+        # Redirection vers HTTPS (à décommenter si nécessaire)
+        # return 301 https://$host$request_uri;
+
+        # Configuration pour servir des fichiers statiques
+        location / {
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html;
+        }
+
+        # Gestion des erreurs
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
     }
 
-    location ~ \.php$ {
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
-    }
+    # Configuration HTTPS (à décommenter et configurer si nécessaire)
+    # server {
+    #     listen 443 ssl http2;
+    #     server_name localhost;
+    #
+    #     ssl_certificate /etc/nginx/ssl/cert.pem;
+    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
+    #
+    #     location / {
+    #         root /usr/share/nginx/html;
+    #         index index.html index.htm;
+    #         try_files $uri $uri/ /index.html;
+    #     }
+    # }
+
+    # Paramètres de compression
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 }
